--- a/src/packages/CSS/Controls/LayerSwitcher/GPFlayerSwitcherStyle.css
+++ b/src/packages/CSS/Controls/LayerSwitcher/GPFlayerSwitcherStyle.css
@@ -25,7 +25,7 @@ button[id^=GPshowLayersListPicto][aria-pressed="true"] {
 /* Layers list */
 .GPpanelBody {
   overflow: auto;
-  max-height: inherit;
+  max-height: 200px;
 }
 
 button[id^=GPlayerInfoClose] {
